<resources>
    <string name="app_name">Notbuk</string>
    <string name="onboard_one"><![CDATA[Be an executioner & execute your ideas.]]></string>
    <string name="onboard_two">Save all your million dollar plans on the go.</string>
    <string name="onboard_three"><![CDATA[Upload your files into cloud & remain updated.]]></string>
    <string name="onboard_two_title">Million-Dollar Plan</string>
    <string name="onboard_three_title">Cloud Upload</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="developed_by_yor_mapobed">Developed by\nYOR MAPOBED</string>
    <string name="onboard_one_title">Your Own Ideas</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="facebook_app_id">316591709643154</string>
    <string name="social_media_option">Or Login using social media</string>
    <string name="name_empty_error">Name cannot be empty.</string>
    <string name="email_empty_error">Email address is wrong.</string>
    <string name="password_empty_error"><![CDATA[Password must be between 6 & 22 characters.]]></string>
    <string name="already_a_member">Already a member? Login</string>
    <string name="still_not_a_member">Still not a member? Register</string>
    <string name="reset">Reset</string>
    <string name="reset_email_link">Check your email for reset link.</string>
    <string name="verify_login">Verify your email before login.</string>
    <string name="email_verification_link_sent">Verification link has been sent to your email. Verify it before login.</string>
    <string name="data_not_stored">Your data could not be stored in database. Please try again</string>
    <string name="already_email">This email is already in uses. Try some thing else.</string>
    <string name="ok">Ok</string>
    <string name="check_internet"><![CDATA[Please check your Internet connection & try again.]]></string>
    <string name="email_password_mismatch"><![CDATA[Email & Password mismatch]]></string>
    <string name="register_before_login">User could not found in database. Register before logging in.</string>
    <string name="please_try_again">The process was cancelled. Please try again.</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="share_this_app">Share this App</string>
    <string name="rate_us">Rate Us</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="about_developer">About Developer</string>
    <string name="support">Support</string>
    <string name="suggest_something">Suggest something</string>
    <string name="help_me">Help me</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="cloud_stotage">Sync Notes</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="rename">Rename</string>
    <string name="edit">Edit</string>
    <string name="we_are_always_in_need_of_money_can_you_help_me_with_some">We are always in need of money. Can you help me with some?</string>
    <string name="enter_the_amount">Enter the amount</string>
    <string name="donate">Donate</string>
    <string name="security_is_our_main_concern_in_digital_transaction_now_you_can_pay_me_through_any_medium_you_want">Security is our main concern in digital transaction. Now you can pay me through any medium you want.</string>
    <string name="amount">Please select an amount between 10 &amp; 8000.</string>
    <string name="note_content_here">Note Content Here</string>
    <string name="note_title_here">Note Title Here</string>
    <string name="help_note_one">-->  If you want to add a new note then click on [img src=ic_baseline_add_24/] button in Notes screen.</string>
    <string name="help_note_two">-->  After completing the note, do not forget to save the document by clicking [img src=ic_baseline_check_24/] button.</string>
    <string name="help_note_three">-->  If you do not want to save the document click on [img src=ic_baseline_arrow_back_ios_24/] button. Then click on the CANCEL button.</string>
    <string name="help_note_four">--> Click on [img src=ic_more/] button on your Notes screen to Edit, Rename, Upload &amp; Delete.</string>
    <string name="help_title">Hey there, welcome to Notbuk. Debopam Roy, developer of this application at your service. This application will help you to write notes &amp; save them.</string>
    <string name="help_note">->  Click on Notes  to customise as well as add new notes in Notes Screen.</string>
    <string name="help_sync">->  Click on Sync Notes to download all the notes from cloud storage to your device.</string>
    <string name="help_sync_one">-->  This feature will be only available if you are logged into your account.</string>
    <string name="help_settings">->  Click on Settings to customise features of the application.</string>
    <string name="help_rate">->  Click on Rate Us to rate the application in Google Play Store.</string>
    <string name="help_share">->  Click on Share this App to share this application with your contact.</string>
    <string name="help_about">->  Click on About Developer to know about the developer who gave their effort to build this application.</string>
    <string name="help_suggest">->  Click on Suggest something to help us with your valuable Ideas. We are excited to read your Ideas.</string>
    <string name="help_dev">->  Click on Help Me to help us financially, so that we can bring up more ideas like this.</string>
    <string name="help_exit">->  Click on Exit to exit the application &amp; return back to your ghome screen.</string>
    <string name="email_debo_roy79_gmail_com">Email : debo.roy79@gmail.com</string>
    <string name="name_debopam_roy">Name : Debopam Roy</string>
    <string name="college_university_of_calcutta">College : University Of Calcutta</string>
    <string name="if_you_want_me_to_help_you_out_with_application_feel_free_to_contact_me_through_my_email">If you want me to help you out with application, feel free to contact me through my email.</string>
</resources>