<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboard.OnboardActivity">

    <TextView
        android:id="@+id/onboard_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/aldrich"
        android:padding="20dp"
        android:text="@string/skip"
        android:textColor="@color/secondColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/onboard_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/aldrich"
        android:padding="20dp"
        android:text="@string/next"
        android:textColor="@color/secondColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/onboard_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/firstColor"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/onboard_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboard_skip" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/onboard_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onboard_get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:tabBackground="@drawable/tab_selector">

    </com.google.android.material.tabs.TabLayout>

    <Button
        android:id="@+id/onboard_get_started"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:background="@drawable/get_started_background"
        android:clickable="true"
        android:elevation="10dp"

        android:fontFamily="@font/exo_medium"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/secondColor"
        app:layout_constraintBottom_toBottomOf="@+id/onboard_view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboard_view_pager" />
</androidx.constraintlayout.widget.ConstraintLayout>